Jsont chunk processing (#9)
* Scan and Parse stages in pipeline are performing at 23k recs/sec

* Scan and Parse stages are working

* Complete fix of issues, now want to make few adjustments in API for better usage

* Happy with this performance